Templates/VNet-2-subnet-custom-DNS.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vnetName": {
      "type": "string",
      "defaultValue": "VNet"
    },
    "vnetAddressSpace": {
      "type": "string",
      "defaultValue": "10.0.0.0/23"
    },
    "subnet1Name": {
      "type": "string",
      "defaultValue": "ExtraNet"
    },
    "subnet1AddressSpace": {
      "type": "string",
      "defaultValue": "10.0.0.0/24"
    },
    "subnet2Name": {
      "type": "string",
      "defaultValue": "CorpNet"
    },
    "subnet2AddressSpace": {
      "type": "string",
      "defaultValue": "10.0.1.0/24"
    },
    "networkSecurityGroupName": {
      "type": "string",
      "defaultValue": "NetworkSecurityGroup"
    },
        "ExternalnetworkSecurityGroupName": {
      "type": "string",
      "defaultValue": "NetworkSecurityGroup"
    },
    "remoteDesktopGatewayIpAddress": {
      "type": "string",
      "defaultValue": "10.0.0.5"
    },
    "yourPublicIpAddress": {
      "type": "string",
      "defaultValue": "10.0.0.1"
    },
    "dnsServers": {
      "type": "array",
      "defaultValue": [
        "10.0.1.4"
      ]
    }
  },

  "variables": {
    "apiVersion": "2016-03-30"
  },

  "resources": [
    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('vnetName')]",
      "apiVersion": "[variables('apiVersion')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('externalnetworkSecurityGroupName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetAddressSpace')]"
          ]
        },
        "dhcpOptions": {
          "dnsServers": "[parameters('dnsServers')]"
        },
        "subnets": [
          {
            "name": "[parameters('subnet1Name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet1AddressSpace')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('ExternalnetworkSecurityGroupName'))]"
            }
           }
          },
          {
            "name": "[parameters('subnet2Name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet2AddressSpace')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]"
              }
            }
          }
        ]
      }

    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('ExternalnetworkSecurityGroupName')]",
      "apiVersion": "[variables('apiVersion')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "inbound allow 443 to WAP",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "[parameters('remoteDesktopGatewayIpAddress')]",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "inbound allow 3389 to GW",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "[parameters('yourPublicIpAddress')]",
              "destinationAddressPrefix": "[parameters('remoteDesktopGatewayIpAddress')]",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Port_49443",
            "properties": {
            "description": "Allow CBA for ADFS",
            "protocol": "TCP",
            "sourcePortRange": "*",
            "destinationPortRange": "49443",
            "sourceAddressPrefix": "*",
            "destinationAddressPrefix": "[parameters('remoteDesktopGatewayIpAddress')]",
            "access": "Allow",
            "priority": 106,
            "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('networkSecurityGroupName')]",
      "apiVersion": "[variables('apiVersion')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "[concat('inbound-allow-',toLower(parameters('subnet1Name')),'-443')]",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "[parameters('subnet1AddressSpace')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 2010,
              "direction": "Inbound"
            }
          },
          {
            "name": "[concat('inbound-allow-',toLower(parameters('subnet1Name')),'-3389')]",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "[parameters('subnet1AddressSpace')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "[concat('inbound-allow-',toLower(parameters('subnet1Name')),'-53')]",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "53",
              "sourceAddressPrefix": "[parameters('subnet1AddressSpace')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 2030,
              "direction": "Inbound"
            }
          }
        ]
      }
    }
  ],

  "outputs": {
    "subnet1": {
      "type": "string",
      "value": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName')), '/subnets/', parameters('subnet1Name'))]"
    },
    "subnet2": {
      "type": "string",
      "value": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName')), '/subnets/', parameters('subnet2Name'))]"
    }
  }

}
